--- a/package.json
+++ b/package.json
@@ -16,58 +16,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.0",
+    "@angular/animations": "7.2.15",
     "@angular/cdk": "^7.1.0",
-    "@angular/cli": "7.0.6",
-    "@angular/common": "7.1.0",
-    "@angular/compiler": "7.1.0",
-    "@angular/compiler-cli": "7.1.0",
-    "@angular/core": "7.1.0",
-    "@angular/forms": "7.1.0",
-    "@angular/http": "7.1.0",
-    "@angular/language-service": "7.1.0",
+    "@angular/cli": "7.3.9",
+    "@angular/common": "7.2.15",
+    "@angular/compiler": "7.2.15",
+    "@angular/compiler-cli": "7.2.15",
+    "@angular/core": "7.2.15",
+    "@angular/forms": "7.2.15",
+    "@angular/http": "7.2.15",
+    "@angular/language-service": "7.2.15",
     "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "7.1.0",
-    "@angular/platform-browser-dynamic": "7.1.0",
-    "@angular/platform-server": "7.1.0",
-    "@angular/pwa": "^0.10.6",
-    "@angular/router": "7.1.0",
-    "@angular/service-worker": "7.1.0",
+    "@angular/platform-browser": "7.2.15",
+    "@angular/platform-browser-dynamic": "7.2.15",
+    "@angular/platform-server": "7.2.15",
+    "@angular/pwa": "^0.13.9",
+    "@angular/router": "7.2.15",
+    "@angular/service-worker": "7.2.15",
     "@datorama/akita": "^1.22.0",
     "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.0",
-    "@types/jasmine": "^3.3.0",
+    "@types/express": "^4.16.1",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/method-override": "0.0.31",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^10.12.10",
+    "@types/node": "^12.0.2",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "codelyzer": "^4.5.0",
     "core-js": "^2.5.7",
     "cross-env": "^5.2.0",
-    "dotenv": "^6.1.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
-    "protractor": "~5.4.1",
-    "rxjs": "^6.3.3",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "^3.1.6",
-    "zone.js": "^0.8.26"
+    "protractor": "~5.4.2",
+    "rxjs": "^6.5.2",
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "3.2.4",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.6",
-    "@types/dotenv": "^6.1.0",
-    "nodemon": "^1.18.6"
+    "@angular-devkit/build-angular": "~0.13.9",
+    "@types/dotenv": "^6.1.1",
+    "nodemon": "^1.19.0"
   }
 }
